--- a/AuthX and AuthN/.env
+++ b/AuthX and AuthN/.env
@@ -1,3 +1,3 @@
-PORT=4000
-MONGODB_URL="mongodb://gungungupta1404:VP6FIfg2dpIgn7Jp@ac-s8a9d83-shard-00-00.cal2te4.mongodb.net:27017,ac-s8a9d83-shard-00-01.cal2te4.mongodb.net:27017,ac-s8a9d83-shard-00-02.cal2te4.mongodb.net:27017/?replicaSet=atlas-7kew3g-shard-0&ssl=true&authSource=admin"
-JWT_SECRET= gungun
+PORT = 4000
+MONGODB_URL = "mongodb+srv://lovebabbar3:D7W857uJ2QOHHc5K@cluster0.c0k4xvu.mongodb.net/AuthApp"
+JWT_SECRET = babbar
